Updated pom.xml with Selenium dependency

--- a/SeleniumJava072024/pom.xml
+++ b/SeleniumJava072024/pom.xml
@@ -3,4 +3,13 @@
   <groupId>com.test</groupId>
   <artifactId>SeleniumJava072024</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+	<dependency>
+	    <groupId>org.seleniumhq.selenium</groupId>
+	    <artifactId>selenium-java</artifactId>
+	    <version>4.22.0</version>
+	</dependency>
+ </dependencies>
 </project>
