--- a/SeleniumJava072024/pom.xml
+++ b/SeleniumJava072024/pom.xml
@@ -19,6 +19,18 @@
 	    <version>7.10.2</version>
 	    <scope>test</scope>
 	</dependency>
+	
+	<dependency>
+			<groupId>com.relevantcodes</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>2.41.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+		<dependency>
+			<groupId>com.aventstack</groupId>
+			<artifactId>extentreports</artifactId>
+			<version>5.0.4</version>
+		</dependency>
 
  </dependencies>
 </project>
