--- a/SeleniumJava072024/pom.xml
+++ b/SeleniumJava072024/pom.xml
@@ -31,6 +31,12 @@
 			<artifactId>extentreports</artifactId>
 			<version>5.0.4</version>
 		</dependency>
+			<dependency>
+	    <groupId>net.sourceforge.jexcelapi</groupId>
+	    <artifactId>jxl</artifactId>
+	    <version>2.6.12</version>
+	</dependency>
+
 
  </dependencies>
 </project>
