--- a/SeleniumJava072024/pom.xml
+++ b/SeleniumJava072024/pom.xml
@@ -36,6 +36,29 @@
 	    <artifactId>jxl</artifactId>
 	    <version>2.6.12</version>
 	</dependency>
+	
+	<dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.13.2</version>
+	    <scope>test</scope>
+	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
+	<dependency>
+	    <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-junit</artifactId>
+	    <version>7.18.1</version>
+	    <scope>test</scope>
+	</dependency>
+
+   <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
+	<dependency>
+        <groupId>io.cucumber</groupId>
+	    <artifactId>cucumber-java</artifactId>
+	    <version>7.18.1</version>
+	</dependency>
+
 
 
  </dependencies>
