--- a/SeleniumJava072024/pom.xml
+++ b/SeleniumJava072024/pom.xml
@@ -58,8 +58,13 @@
 	    <artifactId>cucumber-java</artifactId>
 	    <version>7.18.1</version>
 	</dependency>
-
-
+	
+		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+	<dependency>
+	    <groupId>io.github.bonigarcia</groupId>
+	    <artifactId>webdrivermanager</artifactId>
+	    <version>5.9.2</version>
+	</dependency>
 
  </dependencies>
 </project>
